# command_ap

./: README.md  command_ap.py  hostapd.conf  produce_doc.sh  setup.cfg
Docker Hostapd/: Dockerfile
DockerHostapd/: Dockerfile  README.MD  remove_images.sh  run.sh
DockerHostapd/14/: Dockerfile  config
DockerHostapd/16/: Dockerfile
DockerHostapd/18/: Dockerfile  config
DockerHostapd/backfire/: Dockerfile
MOS/: Check MOS.ipynb  Reward Function-v2.ipynb  Reward Function.ipynb
cmd/: command_ap.py  ifconfig.py  iwconfig.py  scan.py  station.py  survey.py  xmit.py
get-set/: client.py  server.py
get_set/: __init__.py  client.py  decode_mos.py  metric-results.p  server.py  server_ffox.py  teste.py
ps1/: publisher.py  subscriber.py
publisher_subscriber/: publisher.py  subscriber.py
queue/: queue_config_check.ipynb
rl/: README.MD  __init__.py  agent.py  app1.py  mab.py  model.py  reward.py
rl/basic/: environment.py
