[metadata]
name = Command-the-ap
version = 1.0.0
author = Henrique Moura
author-email = h3dema@gmail.com
home-page = https://github.com/h3dema
description = This group of python modules allows to send commands from a remote source to an AP
long-description = file: README.MD
license = GNU
license-file = COPYING
platform = any
keywords = wireless
classifiers = Development Status :: 3 - Alpha

[options]
zip_safe = false
python_requires = >= 3.0
setup_requires =
    setuptools